--- a/src/components/SignIn/SignIn.css
+++ b/src/components/SignIn/SignIn.css
@@ -7,6 +7,7 @@
     padding-top: 20px;
     color:orangered;
     padding: 26px;
+    margin-bottom: 50px;
 }
 .page-title{
     text-align: center;
